feat: login & logout with cookies
