# pkg/route/public.go
@@ -11,7 +11,7 @@ func PublicRoutes(a *fiber.App) {
 	// Create route group.
 	route := a.Group("/api/v1")
 
-	route.Post("/token/new", controller.GetNewAccessToken)
+	route.Post("/auth/login", controller.Login)
 	route.Get("/books", controller.GetBooks)
 	route.Get("/books/:id", controller.GetBook)
 }
